--- a/Frotend/css/index.css
+++ b/Frotend/css/index.css
@@ -1,3 +1,20 @@
 .bg-mynav {
     background-color: #2c3e50;
   }
+
+  .card {
+    max-width: 400px;
+    margin: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+  }
+
+  .card-body {
+    text-align: center;
+    padding: 20px;
+  }
+
+  #username {
+    font-size: 1.2em;
+    color: #333;
+  }
