--- a/Frotend/css/menu.css
+++ b/Frotend/css/menu.css
@@ -113,7 +113,7 @@ body {
 }
 
 .dropdown-menu li a:hover {
-  background-color: #e0d7d7; 
+  background-color: #352f2f; 
 }
 
 /* Logout Styling */
